# kiro-mkdocs

./: .gitignore  AGENTS.md  README.md  mkdocs.yml  pre-commit  pyproject.toml
.github/workflows/: validate-docs.yml
.kiro/: config.yaml
.kiro/hooks/: hooks.json  validate_docs.py
.kiro/rules/: ai-validation-rules.md  api-documentation-rules.md  document-lifecycle.md  metadata-rules.md  validation-policy.md
docs/: index.md  test_precommit.md
docs/00_overview/: api-boundary.md  auth.md
docs/10_api/: endpoints.md  errors.md
docs/30_adr/: adr-0001-error-format.md
tasks/: create-rules.md
tests/: test_validate_docs.py
tools/: validate_completeness.py  validate_context.py  validate_docs.py  validate_integration.py  validate_references.py  validate_semantic.py  validate_tone.py  watch_docs.py
